# profile

./: .env.example  .gitignore  AGENTS.md  DESIGN.md  Makefile  README.md  app.html  biome.json  btc-chart-pro-v3.html  btc-chart.html  components.json  deepbook-predict.html  deepbook.html  doctor.config.json  eslint.config.js  index.html  lint-staged.config.mjs  marketplace.html  package.json  playwright.config.ts  plugin-demo.html  polymarket-dashboard.html  predict-club-lifecycle-prototype.html  predict-club-next.html  predict-club.html  predict-surface-studio.html  react-doctor.config.json  skills-lock.json  solana-standalone.html  solana.html  sui-deepbook-hedging-bot.html  sui-deepbook-predict.html  sui-plugin-wasm.html  sui-plugin.html  telegram-btc-alert.html  tsconfig.app.json  vite.config.solana-standalone.ts  vite.config.ts
.claude/: settings.json  settings.local.json
.claude/agents/: security-reviewer.md
.claude/hooks/: block-sensitive-edits.sh
.claude/skills/: stitch-extract-static-html  stitch-generate-design  stitch-react-components  stitch-react-native  stitch-upload-to-stitch
.commandcode/skills/: stitch-code-to-design  stitch-extract-design-md  stitch-manage-design-system
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  react-doctor.yml
.husky/: pre-commit
.kiro/settings/: lsp.json  mcp.json
.kiro/steering/: 9router-codex.md  clean-architecture.md  codegraph.md  harness-factory.md  plugin-development.md  qmd.md  rtk.md  theme-transition.md  typescript-refactoring.md  writing-conventions.md
.obsidian/: graph.json  workspace.json
.react-doctor/: false-positives.md
dist-solana/: CNAME  solana-standalone.html
docs/: ARCHITECTURE.md  ARCHITECTURE.vi.md  CONTEXT_RULES.md  FEATURE_INTAKE.md  FEATURE_INTAKE.vi.md  HARNESS.md  HARNESS.vi.md  HARNESS_BACKLOG.md  HARNESS_BACKLOG.vi.md  HARNESS_FACTORY.md  HARNESS_FACTORY.vi.md  INDEX.md  INDEX.vi.md  ORGANIZATION.md  ORGANIZATION.vi.md  QMD.md  QMD.vi.md  README.md  README.vi.md  REFERENCE.md  REFERENCE.vi.md  ROOT_DOC_AUDIT.md  ROOT_DOC_AUDIT.vi.md  SETUP.md  SETUP.vi.md  TERMINOLOGY.vi.md  TEST_MATRIX.md  TEST_MATRIX.vi.md  architecture.canvas  deepbook-plugins.md  deepbook-plugins.vi.md  development-workflow-dev-tooling.md  development-workflow-react-grab.md  development-workflow.md  hackathon-notes.md  plugin-architecture-wasm.md  plugin-architecture.md  plugin-catalog.canvas  plugin-catalog.md  plugin-ideas.md  (+11 more)
functions/: .env.example  package.json  tsconfig.json
plugins/btc-chart/wasm/: Cargo.toml  build.sh
plugins/btc-chart/wasm/src/: lib.rs
plugins/polymarket/wasm/: Cargo.toml
plugins/polymarket/wasm/src/: lib.rs
plugins/predict-club/wasm/: Cargo.toml  build.sh
plugins/predict-club/wasm/src/: lib.rs
plugins/sui-navi-analysis/wasm/: Cargo.toml
plugins/sui-navi-analysis/wasm/src/: lib.rs
plugins/sui-swap/wasm/: Cargo.toml  build.sh
plugins/sui-swap/wasm/src/: lib.rs
plugins/sui-zk-merkle/wasm/: Cargo.toml
plugins/sui-zk-merkle/wasm/src/: lib.rs
scripts/: README-codegraph.md  README-predict-club-probe.md  README-predict-club-ui-smoke.md  create-plugin.mjs  create-sui-plugin.mjs  predict-club-probe.mjs  predict-club-studio-smoke.mjs  predict-club-ui-smoke.mjs  qmd-profile-docs-context.sh  setup-agent-mirrors.sh  setup-codegraph.sh  turso-coins.mjs  update-skills.sh
src/: App.css  App.tsx  Portfolio.tsx  index.css  main.tsx
workers/: polymarket-proxy.js
(+928 files in other folders)
