[package]
name = "sui-swap-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM compute kernels for sui-swap plugin (orderbook simulation + quote ranking)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
