[package]
name = "zk-merkle-wasm"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
getrandom = { version = "0.3", features = ["wasm_js"] }
# Poseidon hash over BN254 — same as sui::poseidon on-chain
light-poseidon = "0.2"
# BN254 field arithmetic (0.4.x to match light-poseidon)
ark-bn254 = "0.4"
ark-ff = "0.4"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
opt-level = "s"
lto = true
strip = true
